--- a/pizzashop11/war/first.html
+++ b/pizzashop11/war/first.html
@@ -9,7 +9,7 @@
     <h1>ピザショップへようこそ</h1>
 	
 
-       <div><a href="add.html">注文へ進む</a></div>
+       <div><a href="add.html">アカウント認証</a></div>
 
 
     </form>
